<resources>
    <string name="app_name">Gasto Viagem</string>


    <string name="distance">Distância</string>
    <string name="total_kilometers">Total de Quilômetros</string>
    <string name="price">Preço</string>
    <string name="price_per_liter">Preço por Litro</string>
    <string name="autonomy">Autonomia</string>
    <string name="kms_per_liter">Kms por Litro</string>
    <string name="total_spend">SEU GASTO TOTAL SERÁ DE:</string>
    <string name="total_value">R$ 0</string>
    <string name="calculate">Calcular</string>
</resources>